export interface Profissional {
  id: string;
  primeiroNome: string;
  nomeCompleto: string;
  email: string;
  contato: string;
}
