@startuml
title Diagrama de Classes - Sistema APAE

class Profissional {
  -id_profissional: int
  -nome: string
  -email: string
  -especialidade: string

  +realizarConsulta(paciente: Paciente, data: DateTime): Consulta
  +atualizarDados(email: string, especialidade: string): void
}

class Paciente {
  -id_paciente: int
  -nome: string
  -cpf: string
  -data_nascimento: Date
  -telefone: string
  -condicao_clinica: string

  +agendarConsulta(profissional: Profissional, data: DateTime): Consulta
  +obterProntuario(): Prontuario
}

class Consulta {
  +id_consulta: int
  +data_hora: DateTime
  +status: string
  +observacoes: string

  +registrarObservacoes(texto: string): void
  +alterarStatus(novoStatus: string): void
}

class Prontuario {
  -id_prontuario: int
  -historico_clinico: string
  -alergia: string
  -medicacao: string

  +atualizarHistorico(novoHistorico: string): void
  +listarMedicacoes(): string
  +alterarMedicacoes(novaMedicacao: string): void
}

Profissional "1" --> "0..*" Consulta : realiza >
Paciente "1" --> "0..*" Consulta : participa >
Paciente "1" --> "1" Prontuario : possui >
Prontuario "1" --> "1" Paciente : pertence a >

@enduml
